test/files/neg/jpms_unsafe.scala
class C {
  class D
  new D

  sun.misc.Unsafe.getUnsafe
}
